# data-contract-creator

./: Cargo.toml  README.md  index.html  index.scss
.github/workflows/: rust.yml
src/: main.rs
