[package]
name = "data-contract-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="0.20.0", features = ["csr"]}
serde = "1.0.159"
serde_json = "1.0.95"
web-sys = "0.3.61"
wasm-logger = "0.2.0"