[package]
name = "data-contract-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
yew = {version="0.20.0", features = ["csr"]}
serde = "1.0.159"
serde_json = {version = "1.0.95", features = ["preserve_order"]}
web-sys = {version="0.3.61", features = ["HtmlSelectElement"]}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.84"